--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -42,6 +42,7 @@ jobs:
           coverage-reports: decide/coverage.xml
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     steps:
     - uses: actions/checkout@v1
     - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
