--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -11,7 +11,7 @@ jobs:
         image: postgres:10.8
         env:
           POSTGRES_USER: decide
-          POSTGRES_PASSWORD: complexpassword
+          POSTGRES_PASSWORD: decide
           POSTGRES_DB: decide
         ports:
           - 5432:5432
