--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -7,12 +7,13 @@ jobs:
     strategy:
       matrix:
         pyversion: ['3.5','3.8']
+        postgres: ['12','10.8']
         
     runs-on: ubuntu-latest
 
     services:
       postgres:
-        image: postgres:10.8
+        image: postgres:${{matrix.postgres}}
         env:
           POSTGRES_USER: decide
           POSTGRES_PASSWORD: decide
