--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -50,3 +50,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "decideprueba"
           heroku_email: "josaloroc@alum.us.es"
+    - run: heroku run -a <Heroku app name> sh -c "python decide/manage.py shell -c \"from django.contrib.auth.models import User; User.objects.filter(username='admin') or User.objects.create_superuser('admin', 'admin@example.com', 'admin')\""
