--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,6 +1,14 @@
 name: Python application
 
-on: [push]
+on:
+  push:
+     branches: 
+      - master
+  workflow_call:
+    secrets:
+      CODACY_PROJECT_TOKEN:
+        required: true
+      HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
 
 jobs:
   build:
