--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -6,8 +6,7 @@ on:
       - master
   workflow_call:
     secrets:
-      CODACY_PROJECT_TOKEN:
-        required: true
+      CODACY_PROJECT_TOKEN: ${{secrets.CODACY_PROJECT_TOKEN}}
       HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
 
 jobs:
