--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   buildTest:
-    uses: <tu org>/<tu repo>/.github/workflows/django.yml@master
+    uses: josaloroc/decide/.github/workflows/django.yml@master
     secrets: 
       CODACY_PROJECT_TOKEN: ${{secrets.CODACY_PROJECT_TOKEN}}
       HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
